--- a/styles/estilo.css
+++ b/styles/estilo.css
@@ -34,9 +34,12 @@ h2 {
     margin-top: 1rem;
 }
 
-article {
-    padding-top: 1px;
-    padding-bottom: 1px;
+article {        
+    padding: 1em 0;
+}
+
+section {
+    margin-bottom: 3rem;
 }
 
 .main-header {
@@ -84,7 +87,8 @@ a {
     background-color: transparent;
 }
 
-.main-nav ul a:hover {
+.main-nav ul a:hover,
+.main-nav ul a:focus {
     background-color: var(--secondary-color-light);
     padding-right: 1rem;
 }
@@ -92,4 +96,42 @@ a {
 .main-nav li {
     border-bottom: 1px solid #7b7b7b;
     padding: .4rem .4rem;
+}
+
+.hightlight {
+    border-left: 1px solid var(--primary-color);
+    font-size: 1.1em;
+    padding-left: 2em;
+    margin-bottom: 2.2em;
+    padding: 0 0 0 2em;
+}
+
+.card {
+    max-width: 740px;
+    background-color: var(--secundary-color);
+    padding: 0;
+}
+
+.card_content {
+    padding: .5em 1em 1em;
+}
+
+.card_content p, 
+.card_title {
+    margin: 0;
+}
+
+.card_title {
+    font-size: 1.75em;
+    margin-bottom: .25em;
+}
+
+.card img {
+    max-width: 100%;
+}
+
+.row {
+    display: flex;
+    gap: 1.5em;
+    padding-top: 1.5rem;
 }
