--- a/styles/estilo.css
+++ b/styles/estilo.css
@@ -134,4 +134,30 @@ a {
     display: flex;
     gap: 1.5em;
     padding-top: 1.5rem;
+    justify-content: space-between;
+}
+
+.row > * {
+    flex: 1 0 0%;
+}
+
+.alternate {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+.alternate li {
+    padding: 0;
+}
+
+.alternate li:not(:last-child) {
+    border-bottom: 2px solid;
+}
+
+.roman {
+   list-style-type: upper-roman;
+}
+
+.list-emoji {
+    list-style-type: "\1F642";
 }
