--- a/styles/estilo.css
+++ b/styles/estilo.css
@@ -2,6 +2,9 @@
     --primary-color: #FF7833;
     --secundary-color: #31333B;
     --secondary-color-light:#444856;
+    --secondary-color-dark:#24252d;
+
+    --default-gap: 3rem;
 }
 
 html{
@@ -132,7 +135,7 @@ a {
 
 .row {
     display: flex;
-    gap: 1.5em;
+    gap: var(--default-gap);
     padding-top: 1.5rem;
     justify-content: space-between;
 }
@@ -160,4 +163,51 @@ a {
 
 .list-emoji {
     list-style-type: "\1F642";
+}
+
+input,
+label,
+textarea,
+select {
+    display: inline-block;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+input[type="radio"],
+input[type="checkbox"] {
+    width: auto;
+}
+
+
+input,textarea,select {
+    background-color: #ccc;
+    padding: 1.2rem;
+    border-radius: 5px;
+    margin-bottom: 1.6rem;
+    border: 0;
+}
+
+.row .row {
+    padding-top: 0;
+}
+
+.btn {
+    background-color: var(--secundary-color);
+    border: 2px solid var(--secondary-color-dark);
+    color: white;
+    font-size: 1.2rem;
+    cursor: pointer;
+}
+
+.btn:hover, .btn:focus {
+    background-color: var(--secondary-color-dark);
+}
+
+.form-quiz {
+    width: calc(50% - var(--default-gap) / 2);
+}
+
+.btn-stroke {
+    background-color: transparent;
 }
