--- a/styles/estilo.css
+++ b/styles/estilo.css
@@ -198,6 +198,12 @@ input,textarea,select {
     color: white;
     font-size: 1.2rem;
     cursor: pointer;
+    padding: 0.8em 1.2rem;
+    border-radius: 5px;
+}
+
+.btn + .btn {
+    margin-left: 2rem;
 }
 
 .btn:hover, .btn:focus {
@@ -210,4 +216,19 @@ input,textarea,select {
 
 .btn-stroke {
     background-color: transparent;
+}
+
+.btn-big {
+    font-size: 1.6rem;
+}
+
+.btn-full {
+    display: inline-block;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.btn-full + .btn-full {
+    margin-left: 0;
+    margin-top: 2rem;
 }
